[package]
name = "updatehook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros"] }
toml = "0.5.8"
tracing-subscriber = "0.3.2"
tracing = "0.1"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4.0"
once_cell = "1.8.0"
home = "0.5.3"
chrono = "0.4.19"
bytes = "1.1.0"
futures-util = "0.3.17"
